--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @use 'components/nav';
 @use 'components/header';
 @use 'components/footer';
+@use 'components/about';
 @use 'components/cards';
 @use 'components/forms';
 @use 'components/tags';
